2010-11-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests defs: prefer "$curdir" over "`pwd`".
	* tests/defs.in: We already save the value of `pwd` in $curdir
	early in the file, so there no need to recalculate it later, when
	the current working directory is not changed.

	Tests defs: use `$me' in more error messages.
	* tests/defs.in: Also use `$me' in error messages referring to
	missing `defs' or `defs.in', since that variable is now defined
	before those checks.

	Tests defs: do not use `Exit' where plain `exit' suffices.
	* tests/defs.in: Use "exit 77" rather than "Exit 77" to skip the
	test when required libtool/gettext macros are not found, since
	such skips would take place before the exit trap is installed.

	Tests defs: improve and extends comments.
	* tests/defs.in: Improve and extends some comments, especially in
	relation with the changes introduced by the previous reordering.

	Tests defs: various reorderings.
	* tests/defs.in: Reordered various snippets of code in a
	clearer way.

2010-11-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	New tests on obsoleted usages of automake/autoconf macros (such
	as AC_INIT, AM_INIT_AUTOMAKE and AC_OUTPUT).
	* tests/backcompat.test: New test script.
	* tests/backcompat2.test: Likewise.
	* tests/backcompat3.test: Likewise.
	* tests/backcompat4.test: Likewise.
	* tests/backcompat5.test: Likewise.
	* tests/backcompat6.test: Likewise.
	* tests/init.test: Extended and improved, esp. by trying more
	combinations of calls to AC_INIT and AM_INIT_AUTOMAKE with few
	arguments.
	* tests/Makefile.am (TESTS): Updated.

2010-11-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix bug in rules for creating vala vapi/header files.
	* automake.in (lang_vala_finish_target): Add forgotten "fi" in an
	if control structure in a generated make rules.  Bug introduced
	by previous commit `v1.11-221-gd7c1679', and revealed by failure
	of test `vala2.test'.

2010-11-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
