@@ -102,10 +102,10 @@ sleep='sleep @MODIFICATION_DELAY@'
 old_timestamp=198309271735.59
 
 # Absolute path of the testsuite buildir.
-curdir=`pwd`
+testbuilddir=`pwd`
 
 # Make our wrapper scripts accessible by default.
-PATH="$curdir$PATH_SEPARATOR$PATH"; export PATH
+PATH="$testbuilddir$PATH_SEPARATOR$PATH"; export PATH
 
 
 ## -------------------------------------------------------- ##
@@ -395,10 +395,10 @@ case " $required " in
     esac
     # Libtool cannot cope with spaces in the build tree.  Our testsuite setup
     # cannot cope with spaces in the source tree name for Libtool and gettext
-    # tests.  Using just `$curdir' for the check here is ok, since the further
-    # temporary subdirectory where the test will be run is ensured not to
-    # contain any space.
-    case $testsrcdir,$curdir in
+    # tests.  Using just `$testbuilddir' for the check here is ok, since the
+    # further temporary subdirectory where the test will be run is ensured not
+    # to contain any space.
+    case $testsrcdir,$testbuilddir in
       *\ * | *\	*) exit 77;;
     esac
     ACLOCAL="$ACLOCAL -Wno-syntax -I $top_testsrcdir/m4 $extra_includes -I $aclocaldir"
@@ -429,7 +429,7 @@ sh_errexit_works=@sh_errexit_works@
 if test "$sh_errexit_works" = yes; then
   trap 'exit_status=$?
     set +e
-    cd "$curdir"
+    cd "$testbuilddir"
     case $exit_status,$keep_testdirs in
     0,)
       find $testSubDir -type d ! -perm -200 -exec chmod u+w {} ";"
