@@ -1,5 +1,9 @@
 2010-11-10  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Tests defs: rename $curdir -> $testbuilddir
+	* tests/defs.in: Rename $curdir to $testbuildir, for clarity and
+	consistency with $testsrcdir and $top_testsrcdir.
+
 	Tests defs: prefer "$curdir" over "`pwd`".
 	* tests/defs.in: We already save the value of `pwd` in $curdir
 	early in the file, so there no need to recalculate it later, when
